making some progress

--- a/appendix/appendix.tex
+++ b/appendix/appendix.tex
@@ -279,7 +279,7 @@ these are almost identical to the non-permuted version.
 		\caption{Learning curves for TT-decompositions learning permuted
 		 element-wise multiplication}
 	\end{subfigure}
-	\caption{Training error for various rank decompositions on the permuted
+	\caption[Permuted element-wise multiplication results]{Training error for various rank decompositions on the permuted
 	element-wise multiplication
 	task.}
 	\label{fig:permute-multiply-ff}
@@ -505,7 +505,7 @@ Q.
 \caption{Convex gate transition, orthonormal initialisation.}
 \end{subfigure}\\
 
-\caption{Example simulations of RNN states from different initialisation. Images are
+\caption[Simulated RNN states from various initialisations]{Example simulations of RNN states from different initialisation. Images are
 independently normalised, with darker values being more negative and lighter more positive.}
 \label{fig:inits}
 \end{figure}
