--- a/proj_report_outline.tex
+++ b/proj_report_outline.tex
@@ -10,14 +10,12 @@
               ]{report}
 
 \usepackage{multirow}
-\usepackage{floatrow}
-\newfloatcommand{capbtabbox}{table}[][\FBwidth]
 
-\usepackage[boxruled,
-		    noend,
+\usepackage[
+			 %boxruled,
+		    %noend,
 		    ]{algorithm2e}
-\DontPrintSemicolon
-
+%\DontPrintSemicolon
 \usepackage{url} % for typesetting urls
 \usepackage{hyperref}
 
